# engrave

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  example.rs  netlify.toml
.github/workflows/: ci.yml
examples/: editor.rs
public/: style.css
src/: buffer.rs  editor.rs  language.rs  layout.rs  lib.rs  main.rs  span.rs  use_highlights.rs  use_query.rs
src/editor/: cursor.rs  line.rs  mod.rs  use_editor.rs
tests/: buffer.rs
