[package]
name = "engrave"
version = "0.1.0"
authors = ["Matt Hunzinger <matthunz2@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
dioxus = { git = "https://github.com/dioxuslabs/dioxus" }
dioxus-web = { git = "https://github.com/dioxuslabs/dioxus" }
dioxus-signals = { git = "https://github.com/dioxuslabs/dioxus" }
dioxus-resize-observer = { git = "https://github.com/dioxus-community/dioxus-resize-observer" }
dioxus-use-mounted = { git = "https://github.com/matthunz/dioxus-use-mounted" }
log = "0.4.19"
dioxus-logger = "0.4.1"
console_error_panic_hook = "0.1.7"
ropey = "1.6.1"
tree-sitter-c2rust = "0.20.10"
tree-sitter-rust = { git = "https://github.com/matthunz/tree-sitter-rust" }
lazy_static = "1.4.0"
wasm-bindgen = "0.2.87"
web-sys = { version = "0.3.56", features = ["CanvasRenderingContext2d", "HtmlCanvasElement", "HtmlElement", "TextMetrics"] }
js-sys = "0.3.65"
