[package]
name = "engrave"
version = "0.1.0"
authors = ["Matt Hunzinger <matthunz2@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
xilem = { git = "https://github.com/linebender/xilem", version = "0.1.0" }
vello = { git = "https://github.com/linebender/vello", rev = "9d7c4f00d8db420337706771a37937e9025e089c" }
parley = { git = "https://github.com/dfrg/parley", rev = "2371bf4b702ec91edee2d58ffb2d432539580e1e" }
accesskit = "0.11"
tree-sitter = "0.20.10"
ropey = "1.6.1"
tree-sitter-rust = "0.20.4"
kurbo = "0.10.4"
